<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="threshold">Threshold: %1$d</string>

    <string name="safe_status">Safe status</string>
    <string name="safe_address">Safe address</string>
    <string name="contract_version">Contract version</string>
    <string name="version">Version %1$s</string>
    <string name="version_unknown">unknown</string>
    <string name="version_1_1_1">1.1.1</string>
    <string name="version_1_0_0">1.0.0</string>
    <string name="version_0_1_0">1.0.0</string>
    <string name="ens_name">ENS name</string>
    <string name="ens_name_none_set">Not set yet</string>
    <string name="owners">Owners</string>
    <string name="required_confirmations">Required confirmations</string>
    <string name="required_confirmations_value">%1$d of the %2$d owners need to confirm</string>
    <string name="modules">Modules</string>
    <string name="modules_none_specified">No modules enabled yet</string>
    <string name="deployment_parameters">Deployment parameters</string>
    <string name="deployment_parameters_not_available">Not available</string>
    <string name="click_for_details">Click to see details</string>
    <string name="num_transactions">Number of Transactions</string>
    <string name="safe_mastercopy_version">Version %1$s"</string>
    <string name="error_load_safe_info">error loading safe info</string>
    <string name="error_load_safe_deployment">error loading safe deployment info</string>
    <string name="mastercopy">Mastercopy</string>
    <string name="fallback_handler">Fallback Handler</string>

    <string name="check_all_good">All good!</string>
    <string name="check_contract_version_old">Your contract version is outdated! Please update!</string>
    <string name="check_contract_version_unknown">You are using unknown contract version!</string>
    <string name="check_fallback_not_set">Fallback Handler is not set for this safe</string>
    <string name="check_fallback_unknown">Unknown Fallback Handler</string>
    <string name="check_owners_only_one">Consider adding more owners to the safe</string>
    <string name="check_threshold_one">You should use multi factor authentication</string>
    <string name="check_threshold_all">Loss of one of the key will lock you out of the safe!</string>
    <string name="check_modules_danger_potential">Use modules at your own risk!</string>
    <string name="check_deployment_info_not_available">Not available!</string>
</resources>
